# DualViewPP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cloc_count_lines.sh  Common.h.in  DoxyFile.in  DualView.cpp  DualView.h  InstallUbuntuDependencies.sh  License.txt  MoveDataToPostgreSQL.rb  Plugin.h  RunCodeIndexing.sh  RunCppCheck.sh  RunHelgrind.sh  RunValgrindWithSuppressions.sh  StripGUIVersion.rb  dualviewpp.gresource.xml  main.cpp
GTK_Valgrind/: own.supp
components/: SuperViewer.cpp  SuperViewer.h
core/: CMakeLists.txt  CacheManager.cpp  CacheManager.h  ChangeEvents.cpp  ChangeEvents.h  CurlWrapper.cpp  Database.cpp  Database.h  DownloadManager.cpp  DownloadManager.h  DualView.cpp  DualView.h  IsAlive.h  Plugin.h  PluginManager.cpp  PluginManager.h  PreparedStatement.cpp  PreparedStatement.h  SQLHelpers.cpp  SQLHelpers.h  Settings.cpp  Settings.h  SingleLoad.h  TimeHelpers.cpp  TimeHelpers.h  UtilityHelpers.cpp  UtilityHelpers.h  VirtualPath.cpp  VirtualPath.h
core/components/: CollectionListItem.cpp  CollectionListItem.h  DLListItem.cpp  DLListItem.h  EasyEntryCompletion.cpp  EasyEntryCompletion.h  FolderListItem.cpp  FolderListItem.h  FolderNavigatorHelper.cpp  FolderNavigatorHelper.h  FolderSelector.cpp  FolderSelector.h  ImageListItem.cpp  ImageListItem.h  ImageListScroll.cpp  ImageListScroll.h  ListItem.cpp  ListItem.h  SuperContainer.cpp  SuperContainer.h  SuperViewer.cpp  SuperViewer.h  TagEditor.cpp  TagEditor.h
core/resources/: Collection.cpp  Collection.h  DatabaseResource.cpp  DatabaseResource.h  Folder.cpp  Folder.h  Image.cpp  Image.h  InternetImage.cpp  InternetImage.h  NetGallery.cpp  NetGallery.h  ResourceWithPreview.cpp  ResourceWithPreview.h  Tags.cpp  Tags.h
core/windows/: AddToFolder.cpp  AddToFolder.h  BaseWindow.cpp  BaseWindow.h  CollectionView.cpp  CollectionView.h  DebugWindow.cpp  DebugWindow.h  DownloadSetup.cpp  DownloadSetup.h  Downloader.cpp  Downloader.h  FolderCreator.cpp  FolderCreator.h  ImageFinder.cpp  ImageFinder.h  Importer.cpp  Importer.h  RemoveFromFolders.cpp  RemoveFromFolders.h  SingleCollection.cpp  SingleCollection.h  SingleView.cpp  SingleView.h  TagManager.cpp  TagManager.h
doc/: Mainpage.dox
generator/: SqlToC.rb
gui/: download_setup.glade  gui_mockups.glade  image_list_item.glade  importer.glade  main_gui.glade  main_gui.glade~  single_collection.glade  single_view.glade  tag_editor.glade
hcxselect/: CMakeLists.txt  lexer.h
leviathan/: CMakeLists.txt  FileSystem.cpp  Include.h  Logger.cpp
leviathan/Common/: ThreadSafe.h  Types.cpp  Types.h
leviathan/ObjectFiles/: ObjectFile.cpp  ObjectFileProcessor.cpp
plugins/: CMakeLists.txt  Plugin_GoogleImages.cpp  Plugin_Imgur.cpp
resources/: about_text.txt  dualview.css
resources/gui/: download_item_editor.glade  download_setup.glade  image_finder.glade  importer.glade  main_gui.glade  move_to_window.glade  single_collection.glade  single_view.glade
resources/icons/: from_flaticon.txt
resources/sql/: defaulttablevalues.sql  defaulttags.sql  maintables.sql  migration_14_15.sql  migration_15_16.sql  migration_16_17.sql  migration_18_19.sql  migration_19_20.sql  migration_20_21.sql  migration_21_22.sql  migration_22_23.sql  migration_23_24.sql  migration_24_25.sql  migration_25_26.sql  signaturetables.sql
sql/: defaulttablevalues.sql  defaulttags.sql  maintables.sql  migration_14_15.sql  migration_15_16.sql  migration_18_19.sql
src/: CMakeLists.txt  CacheManager.cpp  CacheManager.h  ChangeEvents.h  Common.h.in  CurlWrapper.h  Database.cpp  Database.h  DownloadManager.cpp  DownloadManager.h  DualView.cpp  DualView.h  IsAlive.h  Plugin.h  PluginManager.cpp  PluginManager.h  PreparedStatement.cpp  PreparedStatement.h  ProcessableURL.cpp  ProcessableURL.h  ReversibleAction.cpp  ReversibleAction.h  SQLHelpers.cpp  SQLHelpers.h  ScanResult.cpp  ScanResult.h  Settings.cpp  Settings.h  SignatureCalculator.cpp  SignatureCalculator.h  SingleLoad.h  TagParser.cpp  TagParser.h  TaskListWithPriority.h  TimeHelpers.h  UbuntuWorkaround.h  UtilityHelpers.cpp  UtilityHelpers.h  VirtualPath.cpp  VirtualPath.h  (+1 more)
src/components/: CollectionListItem.cpp  CollectionListItem.h  DLListItem.cpp  DLListItem.h  EasyEntryCompletion.cpp  EasyEntryCompletion.h  FolderListItem.cpp  FolderListItem.h  FolderNavigatorHelper.cpp  FolderNavigatorHelper.h  FolderSelector.cpp  FolderSelector.h  ImageListItem.cpp  ImageListItem.h  ItemDragInformationProvider.cpp  ItemDragInformationProvider.h  ListItem.cpp  ListItem.h  PrimaryMenu.cpp  PrimaryMenu.h  SuperContainer.cpp  SuperContainer.h  SuperViewer.cpp  SuperViewer.h  TagEditor.cpp  TagEditor.h
src/resources/: Collection.cpp  Collection.h  DatabaseAction.cpp  DatabaseAction.h  DatabaseResource.cpp  DatabaseResource.h  Folder.cpp  Folder.h  Image.cpp  Image.h  ImagePath.h  InternetImage.cpp  InternetImage.h  NetGallery.cpp  NetGallery.h  ResourceWithPreview.cpp  ResourceWithPreview.h  Tags.cpp  Tags.h
src/windows/: ActionEditors.cpp  ActionEditors.h  AddToFolder.cpp  AddToFolder.h  AlreadyImportedImageDeleter.cpp  AlreadyImportedImageDeleter.h  BaseWindow.cpp  BaseWindow.h  CollectionView.cpp  CollectionView.h  DebugWindow.cpp  DebugWindow.h  DownloadItemEditor.cpp  DownloadItemEditor.h  DownloadSetup.cpp  DownloadSetup.h  Downloader.cpp  Downloader.h  DuplicateFinder.cpp  DuplicateFinder.h  FolderCreator.cpp  ImageFinder.cpp  ImageFinder.h  Importer.cpp  Importer.h  MaintenanceTools.cpp  MaintenanceTools.h  RemoveFromFolders.cpp  RemoveFromFolders.h  RenameWindow.cpp  RenameWindow.h  Reorder.cpp  Reorder.h  SingleCollection.cpp  SingleCollection.h  SingleView.cpp  SingleView.h  TagManager.cpp  TagManager.h  Undo.cpp  (+1 more)
test/: CMakeLists.txt  DummyLog.h  TestDatabase.h  TestDualView.h  db_tests.cpp  gtk_tests.cpp  test_actions.cpp  test_collection.cpp  test_events.cpp  test_folder.cpp  test_helpers.cpp  test_image.cpp  test_net_gallery.cpp  test_search.cpp  test_task_list.cpp  test_undo.cpp  testmain.cpp  tests.cpp
test/data/: wanted results.txt
windows/: SingleView.cpp  SingleView.h
